02-Microservices-Architecture/Infra/security_groups.tf
resource "aws_security_group" "alb_sg" {
}
egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
tags = { Name = "${local.name_prefix}-alb-sg" }
}


resource "aws_security_group" "ecs_sg" {
name = "${local.name_prefix}-ecs-sg"
vpc_id = aws_vpc.main.id
description = "Allow traffic from ALB to ecs tasks and outbound to RDS/S3"


ingress {
from_port = 8080
to_port = 8080
protocol = "tcp"
security_groups = [aws_security_group.alb_sg.id]
}


egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
tags = { Name = "${local.name_prefix}-ecs-sg" }
}


resource "aws_security_group" "rds_sg" {
name = "${local.name_prefix}-rds-sg"
vpc_id = aws_vpc.main.id
description = "Allow only ECS to connect to RDS"


ingress {
from_port = 5432
to_port = 5432
protocol = "tcp"
security_groups = [aws_security_group.ecs_sg.id]
}


egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
tags = { Name = "${local.name_prefix}-rds-sg" }
}
